<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/add_book_menu"
    android:icon="@android:drawable/ic_menu_add"
    android:title="@string/home_menu_add_book"
    android:titleCondensed="@string/home_menu_add"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/settings_menu"
    android:icon="@android:drawable/ic_menu_preferences"
    android:title="@string/home_menu_settings"
    app:showAsAction="never" />

</menu>
