<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:padding="12dp"
  android:orientation="vertical">

  <EditText
    android:id="@+id/search_edit_text"
    style="@style/default_input_field"
    android:layout_width="fill_parent"
    android:layout_gravity="top|center_horizontal"
    android:hint="@string/book_search_search_google_books"
    android:inputType="text|textCapSentences|textAutoCorrect"
    android:imeOptions="actionSearch" />

  <TextView
    style="@style/ui_hint"
    android:layout_marginLeft="3dp"
    android:layout_marginBottom="12dp"
    android:text="@string/book_search_hint" />

  <ListView
    android:id="@+id/search_result_list"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:layout_gravity="bottom"
    />

  <com.readtracker.android.thirdparty.SafeViewFlipper
    android:id="@+id/book_add_action_flipper"
    style="@style/flipper_action_buttons">

    <Button
      android:id="@+id/manually_add_book_btn"
      android:text="@string/book_search_new_book"
      style="@style/default_button" />

    <Button
      android:id="@+id/search_button"
      android:text="@string/book_search_search"
      style="@style/default_button" />

  </com.readtracker.android.thirdparty.SafeViewFlipper>
</LinearLayout>
