<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:background="@color/midnight_light"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:paddingLeft="13dip"
  android:paddingRight="13dip">

  <ImageView
    android:id="@+id/imageCover"
    style="@style/cover_image"
    android:layout_height="40dp"
    android:layout_width="40dp" />

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/imageCover"
    android:orientation="vertical">

    <TextView
      android:id="@+id/textTitle"
      style="@style/generic_label"
      android:layout_marginTop="3dp"
      android:layout_marginBottom="0dp"
      android:text="Metamorphosis" />

    <TextView
      android:id="@+id/textAuthor"
      style="@style/generic_label"
      android:layout_below="@id/textTitle"
      android:layout_marginTop="0dp"
      android:layout_marginBottom="0dp"
      android:text="Franz Kafka" />

    <TextView
      android:id="@+id/textFoundVia"
      style="@style/generic_label"
      android:layout_below="@id/textTitle"
      android:layout_marginTop="0dp"
      android:layout_marginBottom="0dp"
      android:text="Via: Christoffer Klang" />

  </LinearLayout>

</RelativeLayout>
