<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/book_activity_edit_book_menu_item"
    android:icon="@android:drawable/ic_menu_edit"
    app:showAsAction="ifRoom"
    android:title="@string/book_activity_edit_book_settings"/>
</menu>
